--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>Cfmovie</title>
-  <%= csrf_meta_tags %>
-  <%= render 'layouts/stylesheets' %>
+  <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
 </head>
 <body>
 	<div class="container">
